Bug 255460 - 2.41.2 fails to build on i386
Summary: 2.41.2 fails to build on i386
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-14 09:56 PDT by Michael Catanzaro
Modified: 2023-04-14 11:30 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2023-04-14 09:56:17 PDT
We are once again intentionally narrowing from uint32_t to EGLAttrib (int), as in bug #254828, but are missing casts:

        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:124:39: error: non-constant-expression cannot be narrowed from type 'uint32_t' (aka 'unsigned int') to 'int' in initializer list [-Wc++11-narrowing]
                    EGL_LINUX_DRM_FOURCC_EXT, format,
                                              ^~~~~~
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:124:39: note: insert an explicit cast to silence this issue
                    EGL_LINUX_DRM_FOURCC_EXT, format,
                                              ^~~~~~
                                              static_cast<int>( )
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:126:44: error: non-constant-expression cannot be narrowed from type 'uint32_t' (aka 'unsigned int') to 'int' in initializer list [-Wc++11-narrowing]
                    EGL_DMA_BUF_PLANE0_OFFSET_EXT, offset,
                                                   ^~~~~~
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:126:44: note: insert an explicit cast to silence this issue
                    EGL_DMA_BUF_PLANE0_OFFSET_EXT, offset,
                                                   ^~~~~~
                                                   static_cast<int>( )
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:127:43: error: non-constant-expression cannot be narrowed from type 'uint32_t' (aka 'unsigned int') to 'int' in initializer list [-Wc++11-narrowing]
                    EGL_DMA_BUF_PLANE0_PITCH_EXT, stride,
                                                  ^~~~~~
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:127:43: note: insert an explicit cast to silence this issue
                    EGL_DMA_BUF_PLANE0_PITCH_EXT, stride,
                                                  ^~~~~~
                                                  static_cast<int>( )
        3 errors generated.
Comment 1 Michael Catanzaro 2023-04-14 10:27:20 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12748
Comment 2 EWS 2023-04-14 11:30:56 PDT
Committed 262977@main (70ea0fe18a21): <https://commits.webkit.org/262977@main>

Reviewed commits have been landed. Closing PR #12748 and removing active labels.