2.41.2 fails to build on i386 https://bugs.webkit.org/show_bug.cgi?id=255460

Unreviewed build fix.

* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:
(WebKit::AcceleratedBackingStoreDMABuf::Texture::Texture):

Canonical link: https://commits.webkit.org/262977@main